# martus

./: .gitignore  Cargo.toml  Dockerfile  README.md  nx.json  package.json  toolchain.toml
auth/: .env.template  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  proto.sh
auth/migrations/: 20231027133719_create_user_authorization_table.sql  20231103043054_create_blacklisted_jwt_table.sql  20231106095612_create-otp-table.sql  20231106102753_join-userand-otp.sql
auth/proto/: auth.proto  change-password.proto  forgot-password.proto  health.proto  login.proto  logout.proto  refresh-token.proto  sign-up.proto  verify-email.proto  verify-token.proto
auth/src/: _.rs  constants.rs  database.rs  grpc_server.rs  jwt.rs  mailer.rs  main.rs  martus_auth.rs  otp.rs
email/: Dockerfile  compose.yaml  package.json
email/src/: app.module.ts  app.service.ts  app.service.ts.bk  main.ts
email/src/kafka/: kafka.service.ts
email/src/nodemailer/: nodemailer.module.ts  nodemailer.service.ts
email/templates/: forgotten-password.ejs  forgotten-password.mjml  password-update.ejs  password-update.mjml  sign-up.ejs  sign-up.mjml  welcome.ejs  welcome.mjml
proxy/: Cargo.toml  Dockerfile  README.md  compose.yaml  project.json  proxy.toml
proxy/src/: main.rs  parsers.rs
psp/: package.json
syllabi/: package.json
