[package]
edition = "2021"
name = "auth"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
dotenv = "0.15.0"
headers = "0.3.9"
jsonwebtoken = "9.1.0"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = {version = "0.7.2", features = ["postgres", "tls-rustls", "uuid", "migrate", "chrono"]}
tokio = {version = "1.33.0", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.4.4", features = ["trace", "cors"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
